--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
     <h1>YA-CHAT</h1>
     </header>
     <div class="person">
-        <button class="button person-button active-person" id="boy-selector">Abbai</button>
-        <button class="button person-button" id="girl-selector">Ammai</button>
+        <button class="button person-button active-person" id="boy-selector">User-A</button>
+        <button class="button person-button" id="girl-selector">User-B</button>
     </div>
 
 
     <div class="chat-container">
-        <h2 class="chat-header">Abbai chatting...</h2>
+        <h2 class="chat-header">User-A chatting...</h2>
         <div class="chat-messages">
-            <div class="message black-bg">
-                <div class="message-sender">Abbai</div>
-                <div class="message-text">HEY ammai,wats'up</div>
+            <div class="message sender-message">
+                <div class="message-text">HEY ,wats'up</div>
                 <div class="message-timestamp">21.19</div>
             </div>
 
-            <div class="message light-bg">
-                <div class="message-sender">Ammai</div>
-                <div class="message-text">HEY abbai,im chatting,what about you</div>
+            <div class="message receiver-message">
+                <div class="message-text">HEY ,im chatting,what about you</div>
                 <div class="message-timestamp">21.20</div>
         </div>
     </div>
